fixed name of button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                 <button id="update" class="btn btn-success btn-sm"> Edit taras quote </button>
             </div>
             <div>
-                <button id="delete"  class="btn btn-warning btn-sm"> Delete empty quote </button>
+                <button id="delete"  class="btn btn-warning btn-sm"> Delete "Mykola" quote </button>
             </div>
             <h3New quote></h3>
             <form action="/quotes" method="POST">
